// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "iblog.pro/cobra/server";

option objc_class_prefix = "HLW";

package virsh;

// The greeting service definition.
service Virsh {
  rpc MachineState (VirshRequest) returns (VirshReply) {}
  rpc MachineCreate (VirshCreateRequest) returns (VirshReply) {}
  rpc MachineDelete (VirshRequest) returns (VirshReply) {}
  rpc MachineSoftReboot (VirshRequest) returns (VirshReply) {}
  rpc MachineHardReboot (VirshRequest) returns (VirshReply) {}
  rpc MachineShutdown (VirshRequest) returns (VirshReply) {}
  rpc MachineShutoff (VirshRequest) returns (VirshReply) {}
  rpc MachineStart (VirshRequest) returns (VirshReply) {}
  rpc MachinePause (VirshRequest) returns (VirshReply) {}
  rpc MachineResume (VirshRequest) returns (VirshReply) {}
}

// The request message containing the user's name.
message VirshRequest {
  string vmname = 1;
}

// The request message containing the user's name.
message VirshCreateRequest {
  string xml = 1;
}


// The response message containing the greetings
message VirshReply {
  string message = 1;
  int32 code = 2;
}
